--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -7,20 +7,35 @@
     <%= form.hidden_field :name, value: current_user.first_name%>
     
     <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %>
-    <div class="serviceCoveredSection row">
-      <div><%= image_tag("catering.jpg", class:"servicesimage")%><h4 class="text-center">Catering</h4><h4 class="text-center">RM100 per service</h4></div>
-      <div><%= image_tag("cleaningservice.jpg", class:"servicesimage")%><h4 class="text-center">Cleaning</h4><h4 class="text-center">RM80 per service</h4></div>
-      <div><%= image_tag("mover.jpg", class:"servicesimage")%><h4 class="text-center">Mover</h4><h4 class="text-center">RM70 per service</h4></div>
-      <div><%= image_tag("plumbing.png", class:"servicesimage")%><h4 class="text-center">Plumbing</h4><h4 class="text-center">RM60 per service</h4></div>
-      <div><%= image_tag("gadgetservice", class:"servicesimage")%><h4 class="text-center">Gadget Repair</h4><h4 class="text-center">RM150 per service</h4></div>
+
+    <div class="choose-service row">
+        <%= button_to "Catering", nil, class: "jobimage chooseThis", style: "background:url('../assets/catering.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= button_to "Cleaning", nil, class: "jobimage", style: "background:url('../assets/cleaningservice.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= button_to "Mover", nil, class: "jobimage", style: "background:url('../assets/mover.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= button_to "Plumbing", nil, class: "jobimage", style: "background:url('../assets/plumbing.png'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= button_to "Gadget Repair", nil, class: "jobimage", style: "background:url('../assets/gadgetservice.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
     </div>
-  
-    <div class="text-field form-group">
-        <%= form.select :category, options_for_select(category), class: "form-control col-md-6 form-text" %>
+    
+    <div class="service-container row">
+      <div class="description-price">
+        <h4 class="text-center">Catering</h4>
+        <h4 class="text-center">RM100 per service</h4></div>
+      <div class="description-price">
+        <h4 class="text-center">Cleaning</h4>
+        <h4 class="text-center">RM80 per service</h4></div>
+      <div class="description-price">
+        <h4 class="text-center">Mover</h4>
+        <h4 class="text-center">RM70 per service</h4></div>
+      <div class="description-price">
+        <h4 class="text-center">Plumbing</h4>
+        <h4 class="text-center">RM60 per service</h4></div>
+      <div class="description-price">
+        <h4 class="text-center">Gadget Repair</h4>
+        <h4 class="text-center">RM150 per service</h4></div>
     </div>
-    <div class="text-field form-group">
-       <h5> RM<%= form.text_field :price, placeholder: "Price", class: "form-text", readonly: true %></h4>
-    </div>
+
+    <%= form.hidden_field :category%>
+    <%= form.hidden_field :price%>
 
     <div class="text-field form-group">
         <%= form.date_field :start_date, placeholder: 'Start Date', class: "form-control"%>
