--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 	</div>
 	<div>
 		<h3 class="showpage-title">Requested Job</h3>
-		<% @requested = @job.where(status: "0") && @job.where(status: "1") %>
+		<% @requested = @job.where.not(status: "completed") %>
 		<% @requested.each do |t| %>
 		  
 		  <div class="thumbnail jobstyle">
@@ -41,7 +41,7 @@
 	</div>
 	<div>
 		<h3 class="showpage-title">Completed Job</h3>
-		<% @requested = @job.where(status: "3")  %>
+		<% @requested = @job.where(status: "completed")  %>
 		<% @requested.each do |t| %>
 		  
 		  <div class="thumbnail jobstyle">
