--- a/app/views/affiliates/show.html.erb
+++ b/app/views/affiliates/show.html.erb
@@ -20,7 +20,7 @@
 				</ul>
 			</div>
 		</div>
-	</div>
+</div>
 
 </br>
 
@@ -42,27 +42,31 @@
 	  	</div>
 	</div>
 
-	<div class="col-md-9">
+	<div class="col-md-9" id="col2">
 		<% if affiliate_signed_in? %>
 			<div class="affiliateupcomingjobsection">
-				<h3>Upcoming Job</h3>
-				<div>
+				<h2>Upcoming Job</h2>
 					<% @requested = @job.where(status: "1") %>
 					<% @requested.each do |t| %>
 					  <%= link_to job_path(t.id) do %>
-					  <div class="thumbnail jobstyle">
-					    <%= image_tag("cooking.jpg", class:"thumnail-image")%>
-					    <div class="caption">
-					      <h5><%= t.start_date.strftime("%d %b %Y") %>, <%= t.start_time.strftime("%l.%M %P") %></h5>
-					      <h5><%= t.category %></h5>
-					      <h5>RM <%= t.price %></h5>
-					      <h5><%= t.status %> by <%= link_to "t.affiliate.first_name" %></h5>
-					    </div>
-					  </div>
-					  <% end %>
-					<% end %>
-				</div>
+				      <div class="thumbnail jobstyle showalljobthumbnail">
+				        <div class="thumbnailhoverclass">
+				          <%= image_tag("cooking.jpg", class:"thumnail-image")%>
+				        <div class="overlay">
+				          <div class="overlaytext"><%= t.category %></div>
+				        </div>
+				        </div>
+				        <h5 id="showjobdatetime"><%= t.start_date.strftime("%d %b %Y") %>, <%= t.start_time.strftime("%l.%M %P")%></h5>
+				        <div class="caption">
+				          <div class="captionPriceCategory">
+				            <h5 id="jobthumbnailPrice">RM <%= t.price %></h5>
+				          </div>
+				        </div>
+				      </div>
+				      <% end %>
+				    <% end %>
 			</div>
+
 		<% else %>
 			<h3 class="showpage-title">Completed Job</h3>
 			<% @requested = @job.where(status: "2") %>
@@ -99,10 +103,9 @@
 				
 				<hr>
 			</div>
-		</div>
-		
 		<% end %>
 	</div>
+</div>
 
 
 <%= render partial: "/layouts/footer" %>
