--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -114,7 +114,7 @@
 
 .service-container {
 	display: flex;
-	justify-content: space-around;
+	justify-content: space-between;
 }
 
 .description-price {
