--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -9,15 +9,15 @@
     <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %>
 
     <div class="choose-service row">
-        <%= submit_tag "Catering", class: "jobimage chooseThis", style: "background:url('../assets/catering.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Cleaning", class: "jobimage", style: "background:url('../assets/cleaningservice.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Mover", class: "jobimage", style: "background:url('../assets/mover.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Plumbing", class: "jobimage", style: "background:url('../assets/plumbing.png'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
-        <%= submit_tag "Gadget Repair", class: "jobimage", style: "background:url('../assets/gadgetservice.jpg'); height: 200px; width: 200px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= submit_tag "Catering", class: "jobimage chooseThis", style: "background:url('../assets/catering.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= submit_tag "Cleaning", class: "jobimage", style: "background:url('../assets/cleaningservice.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= submit_tag "Mover", class: "jobimage", style: "background:url('../assets/mover.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= submit_tag "Plumbing", class: "jobimage", style: "background:url('../assets/plumbing.png'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
+        <%= submit_tag "Gadget Repair", class: "jobimage", style: "background:url('../assets/gadgetservice.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
     </div>
     
     <div class="service-container row">
-        <div class="description-price hide-effect">
+        <div class="description-price hide-effect";>
             <h4 class="text-center">Catering</h4>
             <h4 class="text-center">RM100 per service</h4>
         </div>
