--- a/app/views/affiliates/statement.html.erb
+++ b/app/views/affiliates/statement.html.erb
@@ -50,6 +50,10 @@
       </tr>
     </tbody>
   </table>
+  <br>
+
+  <h6>*** Please note that all collected <i>Pension Fund</i> had already transferred to your own pension fund accont. ***</h6>
+  <h6>*** Please login to your pension fund account to view your saving. ***</h6>
 </div>
 
 
