--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -194,7 +194,7 @@ a.login-text {
   background-color: #2D282C;
   color: white;
   height: 300px;
-  padding-left: 200px;
+  padding-left: 150px;
 }
 
 .usercontactsectionemail{
@@ -214,13 +214,13 @@ a.login-text {
   margin-top: 30px;
   list-style: none;
   display: inline-block;
-  margin-right: 30px;
+  margin-right: 10px;
   text-align: center;
   padding: 20px;
+  border-right: 1px solid white;
 }
 
 .usercontactsectionul li h4{
   font-weight: 900;
-  font-size: 1.5em;
 }
 
