--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins|Sintony');
 @import 'companies';
 @import 'payment';
+@import 'affiliate_sign_up';
 
 .row{
 	margin:0;
