--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -60,7 +60,7 @@
   	bottom: 0;
   	left: 0;
   	right: 0;
-  	background-color: #008CBA;
+  	background-color: #484848;
   	overflow: hidden;
   	width: 0;
   	height: 100%;
