--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -21,7 +21,7 @@
     <div class="item active">
       <%= image_tag ("picture5.jpg") %>
       <div class="carousel-caption">
-        <h1 class="sectionword">A · PRIVATE · SCHEME · COMPANY</h1>
+        <h1 class="sectionword">A · SDG · ORIENTED · COMPANY</h1>
       </div>
     </div>
     <div class="item">
@@ -97,10 +97,10 @@
         <div class="thumbnailhoverclass">
         <%= image_tag("cooking.jpg", class:"thumnail-image")%>
         <div class="overlay">
-          <div class="overlaytext"><%= t.category %></div>
+          <div class="overlaytext"><%= t.start_date %></div>
         </div>
         </div>
-        <h3 id="jobthumbnailName"><%= t.name %></h3>
+        <h3 id="jobthumbnailName"><%= t.category %></h3>
         <div class="caption">
           <div class="captionPriceCategory">
             <h5 id="jobthumbnailPrice">RM <%= t.price %></h5>
