--- a/app/views/affiliates/show.html.erb
+++ b/app/views/affiliates/show.html.erb
@@ -5,7 +5,7 @@
 			<div class="userinfosection">
 				<div><%= image_tag("userprofile.jpg",class:"userprofilepicture")%></div>
 				<div class="userprofileinfopart">
-					<h1><%= current_affiliate.first_name.upcase %> <%= current_affiliate.last_name.upcase %></h1>
+					<h1><%= @affiliate.first_name.upcase %> <%= @affiliate.last_name.upcase %></h1>
 					<h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -17,13 +17,14 @@
 		</div>
 		<div class="col-md-6">
 			<div class="usercontactsection">
-				<h4 class="usercontactsectionemail"><%= image_tag("002-email.png")%><%= current_affiliate.email %></h4>
-				<h4><%= image_tag("001-home.png") %><%= current_affiliate.address %>, <%= current_affiliate.postcode %>, <%= current_affiliate.city %>, <%= current_affiliate.state %>.</h4>
+				<h4 class="usercontactsectionemail"><%= image_tag("002-email.png")%><%= @affiliate.email %></h4>
+				<h4><%= image_tag("001-home.png") %><%= @affiliate.address %>, <%= @affiliate.postcode %>, <%= @affiliate.city %>, <%= @affiliate.state %>.</h4>
 				<ul class="usercontactsectionul">
 					<li><h5><%= @job.count %></br>Completed Job</h5></li>
 					<% if affiliate_signed_in? %>
-						<li><h5>RM <%= @fee %></br>Profits (87%)</h5></li>
-						<li><h5>RM <%= @pension %></br>Pension Fund (8%)</h5></li>
+					<li><h5>RM <%= @fee %></br>Profits (87%)</h5></li>
+					<li><h5>RM <%= @pension %></br>Pension Fund (8%)</h5></li>
+					<% end %>
 				</ul>
 			</div>
 		</div>
@@ -43,7 +44,7 @@
 		    	<li>5) Certified Mover</li>
 		    	</br>
 		    	<% if affiliate_signed_in? %>
-		    		<li class="affiliatecoursesectionbuttonli">LINK TO : <%= link_to "Training Portal", "/training_courses", class:"affiliatecoursesectionbutton"%></li>
+		    		<li class="affiliatecoursesectionbuttonli"><%= link_to "Training Portal", "/training_courses", class:"affiliatecoursesectionbutton"%></li>
 				<% end  %>
 		  	</ul>
 	  	</div>
