--- a/app/views/jobs/show.html.erb
+++ b/app/views/jobs/show.html.erb
@@ -5,7 +5,10 @@
 	<div class="col-md-7 sectionstyle leftsectionstyle leftsection">
 		<div id="boardheadersection">
 			<div><%= image_tag("boardpin2.png",class:"boardpinstyle")%></div>
-			<div class="boardheader"><h1 id="boardheaderWord">Job Posting</h1></div>
+			<div class="boardheader">
+				<h1 id="boardheaderWord">Job Posting</h1>
+				<h4>by <%= @job.user.first_name %></h4>
+			</div>
 		</div>
 		<h1 id="jobName"><%= @job.name %></h1>
 		<h2><%= image_tag("003-2-squares.svg",class:"flaticonstyle")%></h2>
@@ -16,14 +19,21 @@
 				<h4>· <%= @job.start_date %></h4>
 			</div>
 			<div>
+				<h2><%= image_tag("005-price-tag.svg",class:"flaticonstyle")%></h2>
+				<h4>· RM <%= @job.price %></h4>
+			</div>
+			<div>
 				<h2><%= image_tag("007-clock.svg",class:"flaticonstyle")%></h2>
 				<h4>· <%= @job.start_time.strftime("%H:%M %P") %></h4>
 			</div>
 		</div>
-		<h2><%= image_tag("005-price-tag.svg",class:"flaticonstyle")%></h2>
-		<h4>· RM <%= @job.price %></h4>
-		<h2><%= image_tag("004-placeholder.svg",class:"flaticonstyle")%></h2>
-		<h4>· <%= @job.address %>, <%= @job.postcode %>, <%= @job.city %>, </br><%= @job.state %></h4>
+		
+		<% if @job.user == current_user || affiliate_signed_in? %>
+			<h2><%= image_tag("004-placeholder.svg",class:"flaticonstyle")%></h2>
+			<h4>· <%= @job.address %>, <%= @job.postcode %>, <%= @job.city %>, </br><%= @job.state %></h4>
+		<% end %>
+		<h2><%= image_tag("contract.png",class:"flaticonstyle")%></h2>
+		<h4>· <%= @job.description %></h4>
 		
 	</div>
 	<div class="col-md-1"></div>
