--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,7 +39,7 @@
 		    	<li>3) Gardening</li>
 		    	</br>
 		    	<% if affiliate_signed_in? %>
-		    		<li class="affiliatecoursesectionbuttonli">LINK TO : <%= link_to "Training Portal", "/training_courses", class:"affiliatecoursesectionbutton"%></li>
+		    		<li class="affiliatecoursesectionbuttonli"><%= link_to "Training Portal", "/training_courses", class:"affiliatecoursesectionbutton"%></li>
 				<% end  %>
 		  	</ul>
 	  	</div>
@@ -57,15 +57,20 @@
 				        <div class="overlay">
 				          <div class="overlaytext"><%= t.category %></div>
 				        </div>
+				      <% end %>
 				        </div>
 				        <h5 id="showjobdatetime"><%= t.start_date.strftime("%d %b %Y") %>, <%= t.start_time.strftime("%l.%M %P")%></h5>
 				        <div class="caption">
 				          <div class="captionPriceCategory">
 				            <h5 id="jobthumbnailPrice">RM <%= t.price %></h5>
+				            <% if t.status == 0 %>
+				            	<h5 id="jobthumbnailPrice">Awaiting Acceptance %></h5>
+				            <% else %>
+				            	<h5 id="jobthumbnailPrice">Accepted by <%= link_to t.affiliate.first_name, affiliate_path(t.affiliate_id)%></h5>
+				            <% end %>
 				          </div>
 				        </div>
 				      </div>
-				      <% end %>
 				    <% end %>
 				    
 			</div>
