--- a/app/assets/stylesheets/affiliate_sign_up.scss
+++ b/app/assets/stylesheets/affiliate_sign_up.scss
@@ -3,6 +3,7 @@
 	height: 485px;
 	display: inline-block;
 	background-image: url('picture4.jpg');
+  background-size: cover;
 }
 
 .form-container {
