--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,11 +21,11 @@
       <ul class="nav navbar-nav navbar-right">
 
         <% if signed_in? %>
-        <li class="nav navbar-nav navbar-right-item"><%= link_to 'Log In: User',disabled: true, class: "modal-btn navbar-right-1" %></li>
+        <li class="nav navbar-nav navbar-right-item"><%= link_to 'Log In: User', "#", class: "modal-btn navbar-right-1" %></li>
         <li class="nav navbar-nav navbar-right-item"><%= link_to 'Sign out', sign_out_path, method: :delete, class: "modal-btn navbar-right-1" %></li>
         <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1 addpointercursor" id="userlogostyle" href="/users/<%= current_user.id %>/show"><%= image_tag("userprofile.jpg",class:"userlogo")%></a></li>
         <% elsif affiliate_signed_in? %>
-        <li class="nav navbar-nav navbar-right-item"><%= link_to 'Log In: Affiliate',disabled: true, class: "modal-btn navbar-right-1" %></li>
+        <li class="nav navbar-nav navbar-right-item"><%= link_to 'Log In: Affiliate', "#", class: "modal-btn navbar-right-1" %></li>
         <li class="nav navbar-nav navbar-right-item"><%= link_to 'Sign out', affiliate_sign_out_path, class: "modal-btn navbar-right-1" %></li>
         <li class="nav navbar-nav navbar-right-item"><a class="modal-btn navbar-right-1 addpointercursor" id="userlogostyle" href="/affiliates/<%= current_affiliate.id %>"><%= image_tag("userprofile.jpg",class:"userlogo")%></a></li>
         <% elsif !signed_in? && !affiliate_signed_in? %>
