--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 @import '*';
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300|Lobster');
 @import url('https://fonts.googleapis.com/css?family=Poppins|Sintony');
 @import 'companies';
 @import 'payment';
