--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -1,3 +1,11 @@
+.appname{
+	font-family: 'Lobster', cursive;
+	font-weight: 900;
+	font-size: 2em;
+	color: black;
+	letter-spacing: 2px;
+}
+
 .userlogo{
 	height: 50px;
 	width: 50px;
