--- a/app/assets/stylesheets/jobs.scss
+++ b/app/assets/stylesheets/jobs.scss
@@ -86,7 +86,7 @@
 	margin:0 auto;
 }
 
-.reservebutton{
+a.reservebutton{
 	position: relative;
 	background-color: none;
 	color: red;
@@ -95,10 +95,32 @@
 	font-weight: 900;
 	font-size: 1.3em;
 	margin-bottom: 10px;
+	text-decoration: none;
 }
 
 .reservebutton:hover{
 	opacity: 1;
+}
+
+.reservebutton:before{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 2px;
+	bottom: 0;
+	left: 0;
+	background-color: #1D8BDD;
+	visibility: hidden;
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transition: all 0.3s ease-in-out 0s;
+	transition: all 0.3s ease-in-out 0s;
+}
+
+.reservebutton:hover:before{
+	visibility: visible;
+	-webkit-transform: scaleX(1);
+	transform: scaleX(1);
 }
 
 .choose-service {
@@ -126,25 +148,4 @@
 	visibility: hidden;
 	color: red;
 	text-decoration: none;
-}
-
-.reservebutton:before{
-	content: "";
-	position: absolute;
-	width: 100%;
-	height: 2px;
-	bottom: 0;
-	left: 0;
-	background-color: #1D8BDD;
-	visibility: hidden;
-	-webkit-transform: scaleX(0);
-	transform: scaleX(0);
-	-webkit-transition: all 0.3s ease-in-out 0s;
-	transition: all 0.3s ease-in-out 0s;
-}
-
-.reservebutton:hover:before{
-	visibility: visible;
-	-webkit-transform: scaleX(1);
-	transform: scaleX(1);
 }
