--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -38,6 +38,11 @@
         <%= form.password_field :password ,placeholder: 'Password' , class: "form-control"%>
     </div>
 
+    <div class="text-field form-group form-text">
+        <p>Please upload profile photo for verfification.
+            <%= form.file_field :users_avatar%></p>   
+    </div>
+
     <div class="form-group">
       <%= form.submit "Create an account", class: "text-field btn-submit form-control" %>
     </div>
