Modify User's and Affiliate's profile pages

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -91,7 +91,7 @@
 				        <div class="caption">
 				          <div class="captionPriceCategory">
 				            <h5 id="jobthumbnailPrice">RM <%= t.price %></h5>
-				            <h5 id="jobthumbnailPrice">Accepted by <%= link_to t.affiliate.first_name, affiliate_path(t.affiliate_id)%></h5>
+				            <h5 id="jobthumbnailPrice">Completed by <%= link_to t.affiliate.first_name, affiliate_path(t.affiliate_id)%></h5>
 				          </div>
 				        </div>
 				      </div>
