Flexible pic, depends on the category

--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -6,7 +6,7 @@
 
 <!--     <%= form.hidden_field :name, value: current_user.first_name%> -->
     
-    <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %>
+ <!--    <% category = ["Cleaning Service", "Catering Service", "Mobile and Laptop Repair", "Home Maintenance", "Movers", "Plumbing Service"] %> -->
 
     <div class="choose-service row">
         <%= submit_tag "Catering", class: "jobimage chooseThis", style: "background:url('../assets/catering.jpg'); height: 180px; width: 180px; background-repeat: no-repeat; background-position: center; background-size: cover; border-radius: 50%; box-sizing: border-box; font-size: 0px" %>
