--- a/app/views/users/_new.html.erb
+++ b/app/views/users/_new.html.erb
@@ -15,11 +15,11 @@
         <%= form.text_field :phone, placeholder: 'Phone' , class: "form-control"%>
     </div>
 
-    <div class="text-field form-group">
+    <div class="text-field form-group col-md-6">
         <%= form.text_field :address, placeholder: 'Address' , class: "form-control"%>
     </div>
 
-    <div class="text-field form-group">
+    <div class="text-field form-group col-md-6">
         <%= form.text_field :postcode, placeholder: 'Postcode', class: "form-control"%>
     </div>  
 
@@ -39,8 +39,7 @@
     </div>
 
     <div class="text-field form-group form-text">
-        <p>Please upload profile photo for verfification.
-            <%= form.file_field :users_avatar%></p>   
+        <%= form.file_field :users_avatar%></p>   
     </div>
 
     <div class="form-group">
