added information page

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -65,7 +65,7 @@
 	</div>
 	<div class="button">
     <div>
-      <%= link_to "CLICK FOR MORE", "/", class:"buttonstyle" %>	
+      <%= link_to "Click For More", "/information", class:"buttonstyle" %>	
     </div>
   </div>
 </div>
