--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -79,7 +79,7 @@
     <div><%= image_tag("cleaningservice.jpg", class:"servicesimage")%><h4>Cleaning</h4></div>
     <div><%= image_tag("mover.jpg", class:"servicesimage")%><h4>Mover</h4></div>
     <div><%= image_tag("plumbing.png", class:"servicesimage")%><h4>Plumbing</h4></div>
-    <div><%= image_tag("gadgetservice", class:"servicesimage")%><h4>Gadget Repair</h4></div>
+    <div><%= image_tag("gadgetservice.jpg", class:"servicesimage")%><h4>Gadget Repair</h4></div>
   </div>
   <div>
     <h4>something new is coming ...</h4>
