--- a/app/assets/stylesheets/companies.scss
+++ b/app/assets/stylesheets/companies.scss
@@ -8,7 +8,7 @@
 	
 	height: 485px;
 	display: inline-block;
-	background-image: url('partnerbackground.jpg');
+	background-image: image-url('partnerbackground.jpg');
 	background-size: cover;
 }
 
