--- a/app/assets/stylesheets/affiliate_sign_up.scss
+++ b/app/assets/stylesheets/affiliate_sign_up.scss
@@ -2,7 +2,7 @@
 	
 	height: 485px;
 	display: inline-block;
-	background-image: url('picture4.jpg');
+	background-image: image-url("rails.png");
   background-size: cover;
 }
 
